--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "basic node and express socket.io gateway",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon server.ts"
   },
   "author": "Shubham",
   "license": "ISC",
   "dependencies": {
+    "dictionaryjs": "^1.0.9",
     "express": "^4.17.3",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
